fixing titles and spacing

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
 	text-align: center;
   }
 .project-thumbnail {
-	width: 150px;
+	width: 90%;
 }
 /* HOMEPAGE */
 
